[tool.poetry]
name = "repl-nix-6-1-pygame-cpt-joceline-marinhernandez-solo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_6_1_pygame_cpt_joceline_marinhernandez_solo"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
